Add `bundle exec rake graph` to compile the walkthrough and silence errors

--- a/compiled.html
+++ b/compiled.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>
-An unnamed story
+Exercism CLI installation walkthrough
 </title>
 <meta charset="utf-8">
 <style>a,body{color:#222}body{font:18px "Helvetica Neue",Helvetica,Arial,sans-serif}#passage{max-width:38em;margin:0 auto;line-height:145%}a{text-decoration:none;border-bottom:2px solid #bbb}a:hover{color:#cc8929;border-color:#cc8929}a:active{color:#ffb040;border-color:#ffb040}tw-storydata{display:none}@media screen and (max-device-width:480px){#passage{font-size:70%}}</style>
@@ -10,7 +10,7 @@ An unnamed story
 <body>
 <div id="passage"></div>
 
-<tw-storydata name="An unnamed story" startnode="1" creator="Twee2" creator-version="0.5.0" ifid="c85d4bcb-749d-4533-8230-ded97d3cdfad" format="Snowman" options=""><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Welcome" tags="" position=""># Welcome to the Exercism installation guide!
+<tw-storydata name="Exercism CLI installation walkthrough" startnode="1" creator="Twee2" creator-version="0.5.0" ifid="IFID" format="Snowman" options=""><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Welcome" tags="" position=""># Welcome to the Exercism installation guide!
 
 This guide was created in order to help you get started learning with Exercism. Answer a few questions, follow a few instructions, and you should be ready in no time!
 
