Add missing step to table of contents

--- a/compiled.html
+++ b/compiled.html
@@ -704,12 +704,21 @@ Having problems creating adding exercism to the $PATH variable? A solution to yo
 ## Were you able to install Exercism?
 
 - [[Yes-&gt;Installation complete]]
-- [[No-&gt;Talk to a Volunteer]]</tw-passagedata><tw-passagedata pid="23" name="Installing Exercism on a Mac - Expert" tags="" position=""># Installing Exercism on a Mac
+- [[No-&gt;Talk to a Volunteer]]</tw-passagedata><tw-passagedata pid="23" name="Installing Exercism on a Mac" tags="" position=""># Installing Exercism on a Mac
+
+To install Exercism on a Mac, we first need to open the terminal.
+
+---
+
+## Do you know how to open the terminal?
+
+- [[Yes-&gt;Verifying Homebrew Installation]]
+- [[No-&gt;Opening the Terminal on a Mac]]</tw-passagedata><tw-passagedata pid="24" name="Installing Exercism on a Mac - Expert" tags="" position=""># Installing Exercism on a Mac
 
 Do you want to use homebrew to install exercism?
 
 - [[Yes-&gt;Installing Exercism via Homebrew - Expert]]
-- [[No-&gt;Manual Installation on a Mac - Expert]]</tw-passagedata><tw-passagedata pid="24" name="Installing Exercism via Homebrew - Expert" tags="" position=""># Installing Exercism via Homebrew
+- [[No-&gt;Manual Installation on a Mac - Expert]]</tw-passagedata><tw-passagedata pid="25" name="Installing Exercism via Homebrew - Expert" tags="" position=""># Installing Exercism via Homebrew
 
 To install exercism, simply run:
 
@@ -720,7 +729,7 @@ brew install exercism
 ---
 Next steps:
 
-- [[Continue-&gt;Installation complete]]</tw-passagedata><tw-passagedata pid="25" name="Manual Installation on a Mac - Expert" tags="" position=""># Installing Exercism on a Mac manually
+- [[Continue-&gt;Installation complete]]</tw-passagedata><tw-passagedata pid="26" name="Manual Installation on a Mac - Expert" tags="" position=""># Installing Exercism on a Mac manually
 
 1. Download the appropriate version of exercism based on your process architecture at the [releases page](https://github.com/exercism/cli/releases/latest).
 2. Unzip and put the binary in your path.
