Update walkthrough to open external links in new tabs.
https://github.com/exercism/interactive-cli-walkthrough/pull/38

--- a/walkthrough/index.html
+++ b/walkthrough/index.html
@@ -212,8 +212,9 @@ USAGE:
 ## Download the archive
 
 If you know your process architecture (32-bit vs 64-bit vs
-ARM), download the appropriate archive from the [releases
-page](https://github.com/exercism/cli/releases/latest).
+ARM), download the appropriate archive from the
+&lt;a href="https://github.com/exercism/cli/releases/latest" target="_blank"&gt;releases page&lt;/a&gt;.
+
 
 ## Extract from the archive
 
@@ -371,7 +372,8 @@ If you've reached the end of this tutorial, you should be able to determine whet
 - [[Yes-&gt;Installing Exercism via Homebrew]]
 - [[No-&gt;Installing Homebrew]]</tw-passagedata><tw-passagedata pid="17" name="Installing Homebrew" tags="" position=""># Installing Homebrew
 
-Now that we've found out that homebrew isn't installed on your computer yet, let's install it! If you'd like to read more on Homebrew before installing it, the [Homebrew webpage](https://brew.sh/) is a good resource.
+Now that we've found out that homebrew isn't installed on your computer yet, let's install it! If you'd like to read more on Homebrew before installing it, the &lt;a href="https://brew.sh" target="_blank"&gt;Homebrew webpage&lt;/a&gt; is a good resource.
+
 
 ---
 
@@ -978,7 +980,7 @@ exercism version
 
 Having problems getting Exercism on your computer using Homebrew?
 
-Here there is a list of Homebrew - Common Issues that can help: https://docs.brew.sh/Common-Issues.
+Here there is a list of Homebrew - Common Issues that can help: &lt;a href="https://docs.brew.sh/Common-Issues." target="_blank"&gt;Common Issues&lt;/a&gt;
 
 ---
 
@@ -987,7 +989,8 @@ Here there is a list of Homebrew - Common Issues that can help: https://docs.bre
 - [[Yes-&gt;CLI Installation complete]]
 - [[No-&gt;Talk to a Volunteer]]</tw-passagedata><tw-passagedata pid="37" name="Manual Installation on a Mac - Expert" tags="" position=""># Installing Exercism on a Mac manually
 
-1. Download the appropriate version of exercism based on your processor architecture at the [releases page](https://github.com/exercism/cli/releases/latest).
+1. Download the appropriate version of exercism based on your processor architecture at the &lt;a href="https://github.com/exercism/cli/releases/latest" target="_blank"&gt;releases page&lt;/a&gt;.
+
 2. Unzip and put the binary in your path.
 
 After that, verify that it was installed properly by running:
