--- a/walkthrough/index.html
+++ b/walkthrough/index.html
@@ -1,10 +1,7 @@
 <style>tw-storydata{display:none}</style>
 <div id="passage"></div>
 
-<tw-storydata name="Exercism CLI installation walkthrough" startnode="1" creator="Twee2" creator-version="0.5.0" ifid="IFID" format="./storyFormats/exercism" options=""><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">img {
-  width: 100%;
-}
-</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Welcome" tags="" position=""># Welcome to the Exercism installation guide!
+<tw-storydata name="Exercism CLI installation walkthrough" startnode="1" creator="Twee2" creator-version="0.5.0" ifid="IFID" format="./storyFormats/exercism" options=""><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Welcome" tags="" position=""># Welcome to the Exercism installation guide!
 
 This guide was created in order to help you get started learning with Exercism. Answer a few questions, follow a few instructions, and you should be ready in no time!
 
