--- a/walkthrough/index.html
+++ b/walkthrough/index.html
@@ -127,7 +127,7 @@ USAGE:
 
 ---
 
-## Did running `~/bin/exercism` outout something like the above?
+## Did running `~/bin/exercism` output something like the above?
 
 - [[Yes-&gt;Linux path]]
 - [[No-&gt;Talk to a Volunteer]]</tw-passagedata><tw-passagedata pid="9" name="Linux Introduction" tags="" position=""># Installing Exercism on Linux
@@ -184,7 +184,7 @@ USAGE:
 
 ---
 
-## Did running `exercism` outout something like the above?
+## Did running `exercism` output something like the above?
 
 - [[Yes-&gt;CLI Installation complete]]
 - [[No-&gt;Talk to a Volunteer]]</tw-passagedata><tw-passagedata pid="11" name="Linux tarball" tags="" position=""># Getting the Executable
