Clean up walkthrough

--- a/walkthrough/index.html
+++ b/walkthrough/index.html
@@ -92,7 +92,7 @@ don’t know_ below and we could recommend steps to help you.
 ## Do you know your system’s process architecture?
 
 - [[Yes-&gt;Linux tarball]]
-- [[No-&gt;Talk to a Volunteer]]</tw-passagedata><tw-passagedata pid="8" name="Linux directory" tags="" position=""># Moving the Exetuable to `~/bin`
+- [[No-&gt;Talk to a Volunteer]]</tw-passagedata><tw-passagedata pid="8" name="Linux directory" tags="" position=""># Moving the Executable to `~/bin`
 
 Once you downloaded and extracted the
 archive you need to put in `~/bin`.
@@ -127,7 +127,7 @@ USAGE:
 
 ---
 
-## Did running `~/bin/exercism` outout something like the above?
+## Did running `~/bin/exercism` output something like the above?
 
 - [[Yes-&gt;Linux path]]
 - [[No-&gt;Talk to a Volunteer]]</tw-passagedata><tw-passagedata pid="9" name="Linux Introduction" tags="" position=""># Installing Exercism on Linux
@@ -135,7 +135,7 @@ USAGE:
 To install Exercism on Linux you need to get the `exercism`
 executable; different process architectures have different
 `exercism` executables, so you need to install the
-right exectuable matching your process architecture.
+right executable matching your process architecture.
 
 ---
 
@@ -184,7 +184,7 @@ USAGE:
 
 ---
 
-## Did running `exercism` outout something like the above?
+## Did running `exercism` output something like the above?
 
 - [[Yes-&gt;CLI Installation complete]]
 - [[No-&gt;Talk to a Volunteer]]</tw-passagedata><tw-passagedata pid="11" name="Linux tarball" tags="" position=""># Getting the Executable
