--- a/walkthrough/index.html
+++ b/walkthrough/index.html
@@ -452,7 +452,7 @@ To illustrate, your `Downloads` folder should somewhat appear as this:
 
 ## Wrapping up
 
-If you've reached the end of this tutorial without any problems, you should've the Exercism program in your `Downloads` folder!
+If you've reached the end of this tutorial without any problems, you should have the Exercism program in your `Downloads` folder!
 
 ---
 
