Updated text on the walkthrough.
The sentence "After hitting the `Enter` key, you should see that the it notifies you that a configuration file has been written." has been rewritten so that the extra "the" is removed.

--- a/walkthrough/index.html
+++ b/walkthrough/index.html
@@ -34,7 +34,7 @@ In order to configure the CLI, paste in the following text into your terminal:
 
 After typing in the command, hit the `Enter` key.
 
-After hitting the `Enter` key, you should see that the it notifies you that a configuration file has been written.
+After hitting the `Enter` key, you should see that it notifies you that a configuration file has been written.
 
 ---
 
