--- a/walkthrough/index.html
+++ b/walkthrough/index.html
@@ -521,7 +521,7 @@ After pasting in the command, your terminal must reply with `file moved` if the 
 
 ### File not moved
 
-After pasting in the command, your terminal must reply with `file not moved` if the file was moved.
+After pasting in the command, your terminal must reply with `file not moved` if the file was not moved.
 
 ## Wrapping up
 
