fixed small typo in instructions

--- a/walkthrough/index.html
+++ b/walkthrough/index.html
@@ -509,7 +509,7 @@ Once the folder was created, paste in the following command in your terminal to 
 mv ~/Downloads/exercism ~/bin
 ```
 
-To verify whether you've moved the exercism progam correctly, paste in the following command to your terminal:
+To verify whether you've moved the exercism program correctly, paste in the following command to your terminal:
 
 ```
 if [ -f ~/bin/exercism ]; then echo "file moved"; else echo "file not moved"; fi
