Correct print version instruction

--- a/walkthrough/index.html
+++ b/walkthrough/index.html
@@ -630,7 +630,7 @@ Also, all computers with more than 4 GB of memory has to have a 64 bit processor
 After that, verify that it was installed properly by running:
 
 ```
-exercism version
+exercism --version
 ```
 
 ----
