--- a/walkthrough/index.html
+++ b/walkthrough/index.html
@@ -34,11 +34,11 @@ In order to configure the CLI, paste in the following text into your terminal:
 
 After typing in the command, hit the `Enter` key.
 
-After hitting the `Enter` key, you should see that it notifies you that a configuration file has been written.
+After hitting the `Enter` key, you should see a notification from the CLI that a configuration file has been written.
 
 ---
 
-## Have you installed the Exercism CLI on your computer?
+## Have you configured the Exercism CLI on your computer?
 
 - [[Yes-&gt;Installation complete]]
 - [[No-&gt;Configuring the CLI - Troubleshooting]]</tw-passagedata><tw-passagedata pid="6" name="Configuring the CLI - Troubleshooting" tags="" position=""># Configuring the CLI - Troubleshooting
@@ -92,7 +92,7 @@ don’t know_ below and we could recommend steps to help you.
 ## Do you know your system’s process architecture?
 
 - [[Yes-&gt;Linux tarball]]
-- [[No-&gt;Talk to a Volunteer]]</tw-passagedata><tw-passagedata pid="8" name="Linux directory" tags="" position=""># Moving the Executable to `~/bin`
+- [[No-&gt;Talk to a Volunteer]]</tw-passagedata><tw-passagedata pid="8" name="Linux directory" tags="" position=""># Moving the Exetuable to `~/bin`
 
 Once you downloaded and extracted the
 archive you need to put in `~/bin`.
@@ -127,7 +127,7 @@ USAGE:
 
 ---
 
-## Did running `~/bin/exercism` output something like the above?
+## Did running `~/bin/exercism` outout something like the above?
 
 - [[Yes-&gt;Linux path]]
 - [[No-&gt;Talk to a Volunteer]]</tw-passagedata><tw-passagedata pid="9" name="Linux Introduction" tags="" position=""># Installing Exercism on Linux
@@ -135,7 +135,7 @@ USAGE:
 To install Exercism on Linux you need to get the `exercism`
 executable; different process architectures have different
 `exercism` executables, so you need to install the
-right executable matching your process architecture.
+right exectuable matching your process architecture.
 
 ---
 
@@ -184,7 +184,7 @@ USAGE:
 
 ---
 
-## Did running `exercism` output something like the above?
+## Did running `exercism` outout something like the above?
 
 - [[Yes-&gt;CLI Installation complete]]
 - [[No-&gt;Talk to a Volunteer]]</tw-passagedata><tw-passagedata pid="11" name="Linux tarball" tags="" position=""># Getting the Executable
@@ -452,7 +452,7 @@ To illustrate, your `Downloads` folder should somewhat appear as this:
 
 ## Wrapping up
 
-If you've reached the end of this tutorial without any problems, you should have the Exercism program in your `Downloads` folder!
+If you've reached the end of this tutorial without any problems, you should've the Exercism program in your `Downloads` folder!
 
 ---
 
@@ -509,7 +509,7 @@ Once the folder was created, paste in the following command in your terminal to 
 mv ~/Downloads/exercism ~/bin
 ```
 
-To verify whether you've moved the exercism program correctly, paste in the following command to your terminal:
+To verify whether you've moved the exercism progam correctly, paste in the following command to your terminal:
 
 ```
 if [ -f ~/bin/exercism ]; then echo "file moved"; else echo "file not moved"; fi
@@ -521,7 +521,7 @@ After pasting in the command, your terminal must reply with `file moved` if the 
 
 ### File not moved
 
-After pasting in the command, your terminal must reply with `file not moved` if the file was not moved.
+After pasting in the command, your terminal must reply with `file not moved` if the file was moved.
 
 ## Wrapping up
 
@@ -630,15 +630,15 @@ Also, all computers with more than 4 GB of memory has to have a 64 bit processor
 After that, verify that it was installed properly by running:
 
 ```
-exercism --version
+exercism version
 ```
 
 ----
 ## Have you installed Exercism on your computer?
 
 - [[Yes-&gt;CLI Installation complete]]
-- [[No-&gt;Talk to a Volunteer]]
-- [[I don't know my processor architecture-&gt;Determine processor architecture on a Mac - Expert]]</tw-passagedata><tw-passagedata pid="30" name="Moving exercism to PATH on Windows 10" tags="" position=""># Moving the Exercism CLI to the right folder on Windows 10
+- [[I don't know my processor architecture-&gt;Determine processor architecture on a Mac - Expert]]
+- [[How do I put the binary in my path?-&gt;Create bin folder on a Mac]]</tw-passagedata><tw-passagedata pid="30" name="Moving exercism to PATH on Windows 10" tags="" position=""># Moving the Exercism CLI to the right folder on Windows 10
 
 To make the Exercism CLI usable on your computer, we need to move the `exercism` executable file to the correct folder. Using the Command Prompt we just opened, we are going to open the folder.
 
@@ -654,7 +654,7 @@ and hit the 'Enter' key.
 
 A new window, showing a folder, will show up. This is where we need to place the `exercism` file. It will look something like this, but it might not be empty for you.
 
-![cmd.exe folder](https://raw.githubusercontent.com/exercism/interactive-cli-walkthrough/master/contents/assets/win10-cmd-folder.png)
+![cmd.exe folder](https://raw.githubusercontent.com/exercism/interactive-cli-walkthrough/master/contents/assets/windows/win10-cmd-folder.png)
 
 
 ## Step 2: Moving the `exercism` file
@@ -663,7 +663,7 @@ Find the `exercism` file in the folder we opened earlier, when we downloaded `ex
 
 In the `WindowsApps` folder, you should now see the `exercism` file. It will look something like this:
 
-![cmd.exe folder](https://raw.githubusercontent.com/exercism/interactive-cli-walkthrough/master/contents/assets/win10-result.png)
+![cmd.exe folder](https://raw.githubusercontent.com/exercism/interactive-cli-walkthrough/master/contents/assets/windows/win10-result.png)
 
 
 ## Step 3: Verify installation
@@ -678,7 +678,7 @@ and hit the 'Enter' key.
 
 After hitting the `Enter` key, the Command Prompt should reply with how the `exercism` command can be used.
 
-![Exercism usage](https://raw.githubusercontent.com/exercism/interactive-cli-walkthrough/master/contents/assetsl/win10-installed.png)
+![Exercism usage](https://raw.githubusercontent.com/exercism/interactive-cli-walkthrough/master/contents/assets/windows/win10-installed.png)
 
 &gt; Sidenote: As you get the hang of the Exercism CLI, you'll get to know more about its commands.
 
@@ -708,7 +708,7 @@ To verify you are on the correct page, you must see a Downloads list when you sc
 
 On the downloads list, click the file named `exercism-windows-64bit.zip` to download it:
 
-![64-bit download](https://raw.githubusercontent.com/exercism/interactive-cli-walkthrough/master/contents/assets/win10.png)
+![64-bit download](https://raw.githubusercontent.com/exercism/interactive-cli-walkthrough/master/contents/assets/windows/win10.png)
 
 To verify the file was downloaded, you should see a file named `exercism-windows-64bit.zip` in your `Downloads` folder.
 
@@ -719,7 +719,7 @@ Double click on `exercism-windows-64bit.zip` to open the folder.
 
 The folder will show the file `exercism`, and will look something like this:
 
-![Extracted folder](https://raw.githubusercontent.com/exercism/interactive-cli-walkthrough/master/contents/assets/win10-zip.png)
+![Extracted folder](https://raw.githubusercontent.com/exercism/interactive-cli-walkthrough/master/contents/assets/windows/win10-zip.png)
 
 
 ## Wrapping up
@@ -755,7 +755,7 @@ With the Start menu open, start typing `cmd.exe` to search for the Command Promp
 
 When searching for `cmd.exe` in the Start menu, your results will look something like this:
 
-![cmd.exe result](https://raw.githubusercontent.com/exercism/interactive-cli-walkthrough/master/contents/assets/win10-cmd.png)
+![cmd.exe result](https://raw.githubusercontent.com/exercism/interactive-cli-walkthrough/master/contents/assets/windows/win10-cmd.png)
 
 
 ## Step 3: Open the Command Prompt
@@ -764,7 +764,7 @@ Double click the top result, as shown above, to open the Command Prompt.
 
 After double clicking, you'll see a window like the one shown here:
 
-![cmd.exe window](https://raw.githubusercontent.com/exercism/interactive-cli-walkthrough/master/contents/assets/win10-cmd-result.png)
+![cmd.exe window](https://raw.githubusercontent.com/exercism/interactive-cli-walkthrough/master/contents/assets/windows/win10-cmd-result.png)
 
 ---
 
@@ -777,7 +777,7 @@ The website [whichbrowser.net](https://whichbrowser.net/) will show you which ve
 
 The page will look something like this:
 
-![Detecting Windows](https://raw.githubusercontent.com/exercism/interactive-cli-walkthrough/master/contents/assets/win10-detect.png)
+![Detecting Windows](https://raw.githubusercontent.com/exercism/interactive-cli-walkthrough/master/contents/assets/windows/win10-detect.png)
 
 ---
 
