--- a/walkthrough/index.html
+++ b/walkthrough/index.html
@@ -92,7 +92,7 @@ don’t know_ below and we could recommend steps to help you.
 ## Do you know your system’s process architecture?
 
 - [[Yes-&gt;Linux tarball]]
-- [[No-&gt;Talk to a Volunteer]]</tw-passagedata><tw-passagedata pid="8" name="Linux directory" tags="" position=""># Moving the Executable to `~/bin`
+- [[No-&gt;Talk to a Volunteer]]</tw-passagedata><tw-passagedata pid="8" name="Linux directory" tags="" position=""># Moving the Exetuable to `~/bin`
 
 Once you downloaded and extracted the
 archive you need to put in `~/bin`.
@@ -127,7 +127,7 @@ USAGE:
 
 ---
 
-## Did running `~/bin/exercism` output something like the above?
+## Did running `~/bin/exercism` outout something like the above?
 
 - [[Yes-&gt;Linux path]]
 - [[No-&gt;Talk to a Volunteer]]</tw-passagedata><tw-passagedata pid="9" name="Linux Introduction" tags="" position=""># Installing Exercism on Linux
@@ -184,7 +184,7 @@ USAGE:
 
 ---
 
-## Did running `exercism` output something like the above?
+## Did running `exercism` outout something like the above?
 
 - [[Yes-&gt;CLI Installation complete]]
 - [[No-&gt;Talk to a Volunteer]]</tw-passagedata><tw-passagedata pid="11" name="Linux tarball" tags="" position=""># Getting the Executable
@@ -509,7 +509,7 @@ Once the folder was created, paste in the following command in your terminal to 
 mv ~/Downloads/exercism ~/bin
 ```
 
-To verify whether you've moved the exercism program correctly, paste in the following command to your terminal:
+To verify whether you've moved the exercism progam correctly, paste in the following command to your terminal:
 
 ```
 if [ -f ~/bin/exercism ]; then echo "file moved"; else echo "file not moved"; fi
@@ -733,11 +733,11 @@ If you've reached the end of this tutorial without any problems, you should have
 - [[Yes-&gt;Opening the Command Prompt on Windows 10]]
 - [[No-&gt;Download CLI Installer for Windows]]</tw-passagedata><tw-passagedata pid="32" name="Windows Introduction" tags="" position=""># Installing Exercism on Windows
 
-Are you using Windows 10?
+The installer application will determine what version of the Exercism CLI you need, download it, and place it in the right location.
+If you are on Windows 10, you may opt to install the CLI manually by following the steps provided.
 
-- [[Yes, I am using Windows 10.-&gt;Download and unzip 64-bit version on Windows 10]]
-- [[No, I am not using Windows 10.-&gt;Download CLI Installer for Windows]]
-- [[I am not sure what version of Windows I am using.-&gt;Finding out what version of Windows you are using]]</tw-passagedata><tw-passagedata pid="33" name="Opening the Command Prompt on Windows 10" tags="" position=""># Opening the Command Prompt on Windows 10
+- [[Install the CLI using the installer application.-&gt;Download CLI Installer for Windows]]
+- [[Proceed with manual installation.-&gt;Download and unzip 64-bit version on Windows 10]]</tw-passagedata><tw-passagedata pid="33" name="Opening the Command Prompt on Windows 10" tags="" position=""># Opening the Command Prompt on Windows 10
 
 For Exercism to work, it needs to be in the correct folder. The easiest way to move it is by using the Command Prompt.
 
@@ -771,23 +771,7 @@ After double clicking, you'll see a window like the one shown here:
 ## Were you able to open the Command Prompt?
 
 - [[Yes-&gt;Moving exercism to PATH on Windows 10]]
-- [[No-&gt;Download CLI Installer for Windows]]</tw-passagedata><tw-passagedata pid="34" name="Finding out what version of Windows you are using" tags="" position=""># Finding out what version of Windows you are using
-
-The website [whichbrowser.net](https://whichbrowser.net/) will show you which version of Windows you're running.
-
-The page will look something like this:
-
-![Detecting Windows](https://raw.githubusercontent.com/exercism/interactive-cli-walkthrough/master/contents/assets/windows/win10-detect.png)
-
----
-
-## Are you running Windows 10?
-
-- [[Yes-&gt;Download and unzip 64-bit version on Windows 10]]
-- [[No-&gt;Download CLI Installer for Windows]]</tw-passagedata><tw-passagedata pid="35" name="Download CLI Installer for Windows" tags="" position=""># Option to install the Exercism CLI using the installer for Windows
-
-* Either you are using a version of Windows that is earlier than version 10.
-* You ran into issues attempting to install the CLI manually and were not successful.
+- [[No-&gt;Download CLI Installer for Windows]]</tw-passagedata><tw-passagedata pid="34" name="Download CLI Installer for Windows" tags="" position=""># Option to install the Exercism CLI using the installer for Windows
 
 Use the link below to download and execute the Windows Installer for the Exercism CLI.  A new browser window will be opened when you click this link.  Please return to this browser window and let us know if you were successful.
 
