Update `~/bin/exercism` output copy
It seems the output copy may be outdated since the v3 cli output has
changed slightly.  Update the copy to match actual v3 cli output.

--- a/walkthrough/index.html
+++ b/walkthrough/index.html
@@ -118,11 +118,12 @@ Make sure everything worked:
 
 The above should output something like the below:
 ```
-NAME:
-   exercism - A command line tool to interact with http://exercism.io
+A command-line interface for the v2 redesign of Exercism.
 
-USAGE:
-   exercism [global options] command [command options] [arguments...]
+Download exercises and submit your solutions.
+
+Usage:
+   [command]
 …
 ```
 
