--- a/walkthrough/index.html
+++ b/walkthrough/index.html
@@ -117,6 +117,7 @@ Make sure everything worked:
 ```
 
 The above should output something like the below:
+
 ```
 A command-line interface for the v2 redesign of Exercism.
 
@@ -124,7 +125,6 @@ Download exercises and submit your solutions.
 
 Usage:
    [command]
-…
 ```
 
 ---
@@ -175,13 +175,14 @@ exercism
 ```
 
 The above should output something like the below:
-```
-NAME:
-   exercism - A command line tool to interact with http://exercism.io
 
-USAGE:
-   exercism [global options] command [command options] [arguments...]
-…
+```
+A command-line interface for the v2 redesign of Exercism.
+
+Download exercises and submit your solutions.
+
+Usage:
+   [command]
 ```
 
 ---
