--- a/walkthrough/index.html
+++ b/walkthrough/index.html
@@ -157,11 +157,9 @@ echo 'export PATH=~/bin:$PATH' &gt;&gt; ~/.bash_profile
 source ~/.bash_profile
 ```
 
-To check whether this worked, go to your home directory
-and try to run `exercism` without providing the path:
+To check whether this worked, try to run `exercism` without providing the path:
 
 ```
-cd
 exercism
 ```
 
