--- a/walkthrough/index.html
+++ b/walkthrough/index.html
@@ -20,7 +20,7 @@ That being said, let's start with our first question!
 - [[Linux-&gt;Linux Introduction]]
 - [[Mac-&gt;Mac Introduction]]
 - [[Windows-&gt;Windows Introduction]]</tw-passagedata><tw-passagedata pid="2" name="Installation complete" tags="" position=""># Installation complete
-Congratulations, you now have everything set up! Start learning by choosing an exercise from your dashboard!</tw-passagedata><tw-passagedata pid="3" name="CLI Installation complete" tags="" position=""># CLI Installation complete
+Congratulations, you now have everything set up! Start learning by choosing an exercise from [your dashboard](https://exercism.io/my/tracks)!</tw-passagedata><tw-passagedata pid="3" name="CLI Installation complete" tags="" position=""># CLI Installation complete
 Congratulations, you've now installed Exercism on your computer! Our next step is to configure the CLI.
 
 [[Configure the CLI-&gt;Configuring the CLI]]</tw-passagedata><tw-passagedata pid="4" name="Talk to a Volunteer" tags="" position=""># Talk to a Volunteer
@@ -723,7 +723,7 @@ Once the folder was created, paste in the following command in your terminal to 
 mv ~/Downloads/exercism ~/bin
 ```
 
-To verify whether you've moved the exercism progam correctly, paste in the following command to your terminal:
+To verify whether you've moved the exercism program correctly, paste in the following command to your terminal:
 
 ```
 if [ -f ~/bin/exercism ]; then echo "file moved"; else echo "file not moved"; fi
