--- a/walkthrough/index.html
+++ b/walkthrough/index.html
@@ -37,6 +37,10 @@ After typing in the command, hit the `Enter` key.
 
 After hitting the `Enter` key, you should see a notification from the CLI that a configuration file has been written.
 
+### Important: The token above should be treated like a password and not be shared with anyone!
+
+When asking for help that involves a command, remove your token before sharing the command.
+
 ---
 
 ## Have you configured the Exercism CLI on your computer?
