--- a/walkthrough/index.html
+++ b/walkthrough/index.html
@@ -136,7 +136,7 @@ right exectuable matching your process architecture.
 
 ---
 
-## Do you know your process architecture (32-bit vs 64-bit vs ARM)?
+## Do you know your process architecture (x86 (32-bit) vs x86_64 (64-bit) vs ARM)?
 
 - [[Yes-&gt;Linux tarball]]
 - [[No-&gt;Linux architecture]]</tw-passagedata><tw-passagedata pid="9" name="Linux path" tags="" position=""># Adding `~/bin` to `$PATH` in Bash
@@ -187,8 +187,7 @@ Usage:
 
 ## Download the archive
 
-If you know your process architecture (32-bit vs 64-bit vs
-ARM), download the appropriate archive from the
+If you know your process architecture (x86 (32-bit) vs x86_64 (64-bit) vs ARM), download the appropriate archive from the
 &lt;a href="https://github.com/exercism/cli/releases/latest" target="_blank"&gt;releases page&lt;/a&gt;.
 
 
