add the BSDs in list of OSes

--- a/walkthrough/index.html
+++ b/walkthrough/index.html
@@ -19,7 +19,9 @@ That being said, let's start with our first question!
 
 - [[Linux-&gt;Linux Introduction]]
 - [[Mac-&gt;Mac Introduction]]
-- [[Windows-&gt;Windows Introduction]]</tw-passagedata><tw-passagedata pid="2" name="Installation complete" tags="" position=""># Installation complete
+- [[Windows-&gt;Windows Introduction]]
+- OpenBSD - follow [[Linux-&gt;Linux Introduction]] instructions, just download OpenBSD binary.
+- FreeBSD - follow [[Linux-&gt;Linux Introduction]] instructions, just download FreeBSD binary.</tw-passagedata><tw-passagedata pid="2" name="Installation complete" tags="" position=""># Installation complete
 Congratulations, you now have everything set up! Start learning by choosing an exercise from [your dashboard](https://exercism.io/my/tracks)!</tw-passagedata><tw-passagedata pid="3" name="CLI Installation complete" tags="" position=""># CLI Installation complete
 Congratulations, you've now installed Exercism on your computer! Our next step is to configure the CLI.
 
