Explain where to find token.

--- a/walkthrough/index.html
+++ b/walkthrough/index.html
@@ -33,6 +33,8 @@ In order to configure the CLI, paste in the following text into your terminal:
 [CONFIGURE_COMMAND]
 ```
 
+You can find your token in your [settings page](http://exercism.io/my/settings).
+
 After typing in the command, hit the `Enter` key.
 
 After hitting the `Enter` key, you should see a notification from the CLI that a configuration file has been written.
