--- a/walkthrough/index.html
+++ b/walkthrough/index.html
@@ -33,7 +33,7 @@ In order to configure the CLI, paste in the following text into your terminal:
 [CONFIGURE_COMMAND]
 ```
 
-You can find your token in your [settings page](http://exercism.io/my/settings).
+You can find your token on your [settings page](http://exercism.io/my/settings).
 
 After typing in the command, hit the `Enter` key.
 
@@ -226,7 +226,7 @@ Check the installed version with:
 exercism version
 ```
 
-If you do not have sudo access, you will need to install via source code.
+If you do not have sudo access, you will need to [[install via source code-&gt;Linux tarball]].
 
 If you don't have snap installed on your system, you can [follow this tutorial](https://tutorials.ubuntu.com/tutorial/basic-snap-usage). If you are not familiar with snaps, you may want to [learn more about them](https://www.fosslinux.com/10380/what-are-snaps-and-how-to-install-it-on-various-linux-distributions.htm) and [how to manage them](https://hackernoon.com/managing-ubuntu-snaps-the-stuff-no-one-tells-you-625dfbe4b26c).
 
