--- a/walkthrough/index.html
+++ b/walkthrough/index.html
@@ -57,26 +57,26 @@ in the following command into your terminal:
 uname -m
 ```
 
-Hit `Enter` after you’ve pasted in the command and examine the output.
+Hit `Enter` after you have pasted in the command and examine the output.
 
 ## `x86_64`
 
-If the output is `x86_64` then you’re on a 64-bit architecture.
+If the output is `x86_64` then you are on a 64-bit architecture.
 
-The file you’re looking for is `exercism-linux-64bit.tgz`.
+The file you are looking for is `exercism-linux-64bit.tgz`.
 
 ## `i686`
 
-If the output is `i686` then you’re on a 32-bit architecture.
+If the output is `i686` then you are on a 32-bit architecture.
 
-The file you’re looking for is `exercism-linux-32bit.tgz`.
+The file you are looking for is `exercism-linux-32bit.tgz`.
 
 ## `armv5l`, `armv6l`, `armv7l` or `armv8l`
 
 If the output is `armv5l`, `armv6l`, `armv7l`
-or `armv8l` then you’re on an ARM architecture.
+or `armv8l` then you are on an ARM architecture.
 
-The file you’re looking for is `exercism-linux-arm-v5.tgz`,
+The file you are looking for is `exercism-linux-arm-v5.tgz`,
 `exercism-linux-arm-v6.tgz`, `exercism-linux-arm-v7.tgz`
 or `exercism-linux-arm-v8.tgz` (respectively).
 
@@ -93,8 +93,7 @@ snap package or talk to a volunteer if snap is not an option for you.
 - [[No, I would like to try the snap package-&gt;Linux - Snap]]
 - [[No, I would like talk to a volunteer-&gt;Talk to a Volunteer]]</tw-passagedata><tw-passagedata pid="7" name="Linux directory" tags="" position=""># Moving the Executable to `~/bin`
 
-Once you downloaded and extracted the
-archive you need to put in `~/bin`.
+Once you download and extract the archive, make it available in your `$PATH`.
 
 First, let’s make sure the directory exists:
 
@@ -357,8 +356,7 @@ If you've reached the end of this tutorial, you should be able to determine whet
 - [[Yes-&gt;Installing Exercism via Homebrew]]
 - [[No-&gt;Installing Homebrew]]</tw-passagedata><tw-passagedata pid="17" name="Installing Homebrew" tags="" position=""># Installing Homebrew
 
-Now that we've found out that homebrew isn't installed on your computer yet, let's install it! If you'd like to read more on Homebrew before installing it, the &lt;a href="https://brew.sh" target="_blank"&gt;Homebrew webpage&lt;/a&gt; is a good resource.
-
+If you would like to read more on Homebrew before installing it, the &lt;a href="https://brew.sh" target="_blank"&gt;Homebrew webpage&lt;/a&gt; is a good resource.
 
 ---
 
