--- a/walkthrough/index.html
+++ b/walkthrough/index.html
@@ -1019,7 +1019,7 @@ Use the link below to download and execute the Windows Installer for the Exercis
 
 &lt;a href="https://github.com/exercism/windows-installer/releases/latest" target="_blank"&gt;https://github.com/exercism/windows-installer/releases/latest&lt;/a&gt;
 
-## Were your able to successfully install the Exercism CLI using the Windows Installer?
+## Were you able to successfully install the Exercism CLI using the Windows Installer?
 
 - [[Yes-&gt;CLI Installation complete]]
 - [[No-&gt;Talk to a Volunteer]]</tw-passagedata></tw-storydata>
