Fix wrong link in walkthrough

--- a/walkthrough/index.html
+++ b/walkthrough/index.html
@@ -857,7 +857,7 @@ Also, all computers with more than 4 GB of memory has to have a 64 bit processor
 ---
 ## Do you know your processor architecture?
 
-- [[Yes-&gt;Manual Installation on a Mac - Expert]]
+- [[Yes-&gt;Manual Installation on a Mac]]
 - [[I don't know-&gt;Talk to a Volunteer]]</tw-passagedata><tw-passagedata pid="34" name="Installing Exercism on a Mac - Expert" tags="" position=""># Installing Exercism on a Mac
 
 To install exercism via Homebrew run:
