--- a/walkthrough/index.html
+++ b/walkthrough/index.html
@@ -8,7 +8,7 @@ This guide was created in order to help you get started learning with Exercism. 
 
 To make better use of the guide, here's a brief outline of how this guide is structured:
 
-- This guide is comprised of several tutorials. These outline the steps needed to get Exercism installed. Inside each tutorial are step-by-step instructions to get Exercism running, as well as steps to verify whether you've done the right thing.
+- This guide is composed of several tutorials. These outline the steps needed to get Exercism installed. Inside each tutorial are step-by-step instructions to get Exercism running, as well as steps to verify whether you've done the right thing.
 
 - At the end of each tutorial, we ask a question in order to track your progress. This helps us to point you to the next installation step.
 
