Adds some detail about what the CLI does.

--- a/walkthrough/index.html
+++ b/walkthrough/index.html
@@ -25,9 +25,9 @@ Congratulations, you've now installed Exercism on your computer! Our next step i
 
 [[Configure the CLI-&gt;Configuring the CLI]]</tw-passagedata><tw-passagedata pid="4" name="Talk to a Volunteer" tags="" position=""># Talk to a Volunteer
 
-Are you having problems installing Exercism? Don't worry! We have volunteers willing to help you [here](https://gitter.im/exercism/support). Getting new people to learn with Exercism is our top priority, so please don't be afraid to reach out.</tw-passagedata><tw-passagedata pid="5" name="Configuring the CLI" tags="" position=""># Configuring the CLI
+Are you having problems installing Exercism? Don't worry! We have volunteers willing to help you [here](https://gitter.im/exercism/support). Getting new people to learn with Exercism is our top priority, so please don't be afraid to reach out.</tw-passagedata><tw-passagedata pid="5" name="Configuring the CLI" tags="" position=""># Configuring the Command Line Interface
 
-In order to configure the CLI, paste in the following text into your terminal:
+In order to configure the Exercism command line interface (CLI), paste the following text into your terminal:
 
 ```
 [CONFIGURE_COMMAND]
